--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,5 +4,20 @@ markdown_extensions:
   - admonition
   - codehilite
   - pymdown-extensions
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:pymdownx.emoji.to_svg
+  - pymdownx.inlinehilite
+  - pymdownx.magiclink
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
 repo_url:  https://github.com/APTrust/userguide
 
