--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,9 +21,27 @@ markdown_extensions:
 repo_url:  https://github.com/APTrust/userguide
 nav:
   - Home: index.md
-  - Core Concepts: core-concepts.md
-  - Getting Started: getting-started.md
-  - Your first deposit: first-deposit.md
-  - Your first restoration: first-restore.md
+  - Quick Start:
+      - index.md
+      - first_deposit_with_dart.md
+      - first_deposit_with_tools.md
+  - Preservation Actions:
+      - index.md
+      - ingest.md
+      - updates.md
+      - restoration.md
+      - deletion.md
+  - Bagging:
+      - index.md
+      - tools.md
+  - Using Pharos:
+      - index.md
+      - objects.md
+      - files.md
+      - events.md
+      - work_items.md
+      - user_management.md
+      - two_factor_auth.md
+      - rest_api.md
   - Glossary: glossary.md
-  - Links: links.md
+  - Contact Us: contact_us.md
