--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,10 @@
 site_name: APTrust User Guide
 theme: material
+extra_css:
+  - 'stylesheets/extra.css'
+
 markdown_extensions:
+  - attr_list
   - admonition
   - codehilite
   - pymdownx.betterem:
